# ai-sre-observability

./: .gitignore  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
docs/architecture/: ai-sre-observability-architecture.drawio
docs/superpowers/plans/: 2026-04-18-ai-sre-observability.md
docs/superpowers/specs/: 2026-04-18-ai-sre-observability-design.md
grafana/: README.md  llm-cost-usage.json  request-tracing.json  service-overview.json
k8s/: README.md  deployment.yaml
k8s/grafana/: grafana-dashboard.yaml  grafana-deployment.yaml  grafana-service.yaml
k8s/observability-service/: configmap.yaml  service.yaml
k8s/prometheus/: prometheus-config.yaml  prometheus-deployment.yaml  prometheus-service.yaml
sdk/: README.md  requirements.txt  setup.py
sdk/ai_sre_observability/: __init__.py  client.py  decorators.py  models.py  pricing.py  transport.py
service/: Dockerfile  __init__.py  config.py  cost_calculator.py  main.py  metrics.py  models.py  requirements.txt
tests/integration/: __init__.py  test_e2e.py
tests/sdk/: test_client.py  test_decorators.py  test_transport.py
tests/service/: test_config.py  test_cost_calculator.py  test_main.py  test_metrics.py  test_models.py
