[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sre-observability"
version = "0.1.0"
description = "AI SRE Observability Platform"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["service*", "sdk*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
